Chapter03/Ch03_02-vpc-secondary-cidr/terraform-codes/launch_template.tf
resource "aws_launch_template" "hhtest-launch-template" {

  name = "hhtest-launch-template"

  block_device_mappings {
    device_name = "/dev/xvda"

    ebs {
      delete_on_termination = "true"
      iops                  = "0"
      # throughput            = "0"
      volume_size           = "20"
      volume_type           = "gp2"
    }
  }

  default_version         = "1"
  disable_api_termination = "false"

   iam_instance_profile {
#     name = "<iam_instance_profile_name>"
#     name = "arn:aws:iam::046822486271:instance-profile/eks-full-profile"
     name = aws_iam_instance_profile.hhtest-profile.name
   }

  image_id      = "ami-056d8657d1f2fbc85"
  instance_type = "t3a.medium"

  metadata_options {
    http_endpoint = "enabled"
    http_put_response_hop_limit = "2"
  }



  network_interfaces {
    device_index       = "0"
    ipv4_address_count = "0"
    ipv6_address_count = "0"
    network_card_index = "0"
#    security_groups    = ["sg-0a8752281fbd874a0"]
    security_groups    = [aws_security_group.hhtest-sg-eks-cluster.id]
  }
  tags = {
    "eks:cluster-name"   = "hhtest-eks-cluster"
    "eks:nodegroup-name" = "hhtest-eks-nodegroup"
  }

  tags_all = {
    "eks:cluster-name"   = "hhtest-eks-cluster"
    "eks:nodegroup-name" = "hhtest-eks-nodegroup"
  }

  user_data = "TUlNRS1WZXJzaW9uOiAxLjAKQ29udGVudC1UeXBlOiBtdWx0aXBhcnQvbWl4ZWQ7IGJvdW5kYXJ5PSIvLyIKCi0tLy8KQ29udGVudC1UeXBlOiB0ZXh0L3gtc2hlbGxzY3JpcHQ7IGNoYXJzZXQ9InVzLWFzY2lpIgojIS9iaW4vYmFzaApzZXQgLWV4CkI2NF9DTFVTVEVSX0NBPUxTMHRMUzFDUlVkSlRpQkRSVkpVU1VaSlEwRlVSUzB0TFMwdENrMUpTVU0xZWtORFFXTXJaMEYzU1VKQlowbENRVVJCVGtKbmEzRm9hMmxIT1hjd1FrRlJjMFpCUkVGV1RWSk5kMFZSV1VSV1VWRkVSWGR3Y21SWFNtd0tZMjAxYkdSSFZucE5RalJZUkZSSmVVMUVTWGhQUkVWNVRsUmpkMDlXYjFoRVZFMTVUVVJKZUU1cVJYbE9WR04zVDFadmQwWlVSVlJOUWtWSFFUR [...]
}
